# xapps2

./: .gitignore  README.md  config.yaml  config.yaml.sample  device_config.json  pyproject.toml  start.sh
.github/workflows/: formatter.yaml  release.yaml
tests/: test_xapps2.py
xapps2/: __main__.py  apkdl.py  config.py  http.py  main.py  miscdl.py  nikgappsdl.py  playstoredl.py  test.py  utils.py
