[tool.poetry]
name = "xapps2"
version = "0.1.1"
description = ""
authors = ["Leorio Paradinight <62891774+code-rgb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyppeteer = "^0.2.5"
PyYAML = "^5.4.1"
aiohttp = "^3.7.4"
feedparser = "^6.0.8"
uvloop = {version = "^0.16.0", platform = "linux"}
aiodns = "^3.0.0"
Brotli = "^1.0.9"
cchardet = "^2.1.7"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
autoflake = "^1.4"
isort = "^5.9.3"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
